Added two different tabu search and their print

--- a/.gitignore
+++ b/.gitignore
@@ -218,4 +218,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+Materiale/
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,python
