--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: mattiamaccari
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        password: ${{ secrets.DOCKER_TOKEN }}
         
     - name: Docker build and push
       uses: docker/build-push-action@v5
